First Pages commit

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     document.getElementById('output').value = 'Executing...';
                     var inject = document.createElement('script');
                     inject.setAttribute('type', 'text/javascript');
-                    inject.setAttribute('src', 'https://github.com/minxomat/Recall/raw/master/recall.min.js');
+                    inject.setAttribute('src', 'http://cdn.rawgit.com/minxomat/Recall/master/recall.min.js');
                     document.head.appendChild(inject);
                 }
             </script>
