--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Recall</h1>
-							<p><a href="http://minxomat.eu/introducing-recall">Tutorial</a> - <a href="https://github.com/minxomat/Recall/blob/master/README.md#running-recall-locally">Download</a></p>
+							<p><a href="https://github.com/minxomat/Recall/blob/master/README.md#running-recall-locally">Download</a></p>
 						</header>
 						<hr />
 				        <div class="field">
